--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         .service-item h3 {
             font-size: 1.8em;
             margin-bottom: 10px;
+            display: inline-block;
         }
 
         .service-item p {
